# max_e1_apps

max_e1_examples/: CMakeLists.txt
max_e1_examples/src/: actuators_example.cpp  bus_example.cpp  motions_example.cpp  sensors_example.cpp
max_e1_lib/: CMakeLists.txt
max_e1_lib/include/: max_e1.hpp  max_e1_bus.hpp
max_e1_lib/src/: max_e1.cpp  max_e1_bus.cpp
